--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Jan Siska. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="/img/ja.jpg" alt="">
     </div>
     
